# goit-algo2

./: README.md  pyproject.toml
hw-01/: task-1.py  task-2.py
hw-02/: task-1.py  task-2.py
hw-03/: readme.md  task-1.py  task-2.py
hw-04/: task-1.py  task-2.py  trie.py
hw-05/: task-1.py  task-2.py
hw-06/: task-1.py
hw-07/: lru.py  splay_tree.py  task-1.py  task-2.py
hw-08/: task-1.py  task-2.py
hw-09/: task.py
hw-10/: task-1.py  task-2.py
