[project]
name = "goit-algo2-homeworks"
version = "0.1.0"
description = ""
authors = [
    {name = "Lada",email = "lada11lada@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "btrees (>=6.1,<7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
